--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -9,7 +9,7 @@
     --color-brand-gray: #d9d9d9;
     --color-brand-highlight: #42a457;
 
-    --font-sans: "Inter", ui-sans-serif, system-ui, -apple-system, Segoe UI,
+    --font-sans: "Poppins", ui-sans-serif, system-ui, -apple-system, Segoe UI,
         Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji",
         "Segoe UI Symbol";
 }
